--- a/static/index.html
+++ b/static/index.html
@@ -1,41 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet"> 
-</head>
-<body>
-    
-
-    <section class="main-container">
-     <div class="outer-form">   
-        <div class="greets">
-            <div>
-
-                <h1>Hellow There!</h1>
-                <p>Please Enter Your Session ID to Authenticate</p>
-            </div>
-        </div>
-
-         <div class="form">
-            <form action="/wa/qr" method="get" target="_blank">
-                <h1>Authenticate</h1>
-                <input type="password" placeholder="Session" id="session" name="session"/>
-                <button>Login</button>
-            </form>
-        </div>
-
-    </div>
-    </section>
-
-<style>
-  
-</style>
-
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="style.css"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet"></head><body><section class="main-container"><div class="outer-form"><div class="greets"><div><h1><b>Hi!</b></h1><p>Masukkan ID Sesi (Session ID) untuk Melakukan Proses Autentikasi</p></div></div><div class="form"><form action="/auth/qr" method="get" target="_blank"><h1>Authenticate</h1><input type="password" placeholder="Session" id="session" name="session"><button>Autentikasi</button></form></div></div></section><style></style></body></html>
